src/test/deca/context/invalid/test_pass_3_type_not_defined.deca
// Description:
//    Program testing type not defined
//
// Results:
//    error
//
// History:
//    Created on 13/01/2025

{
    notDefined x = 5;
}
